--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noémie Pivin</title>
+    <meta
+      name="description"
+      content="Noémie Pivin is a front-end developer student based in London, check out her projects and contact her for job inquiries."
+    />
+    <title>Front-end developer portfolio - Noémie Pivin</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -49,13 +53,24 @@
     <h1 class="text-center">Noémie Pivin</h1>
     <h3 class="text-center">🇫🇷 Front-end developer, based in London</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="primary-link"
+        title="Contact Noémie Pivin"
+        >Contact me</a
+      >
+      <a href="about.html" class="secondary-link" title="About Noémie Pivin"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="/images/yoga.png"
+            alt="Yoga project"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga App</h2>
@@ -66,7 +81,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -80,16 +97,26 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Weather project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            alt="Weather project"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            alt="Yogurt project"
+            class="img-fluid rounded"
+          />
         </div>
         <div class="col-md-6 mb-5">
           <h2 class="mb-3">Yogurt App</h2>
@@ -100,7 +127,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Yogurt project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
