--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <img
             src="/images/yoga.png"
             alt="Yoga project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6">
@@ -81,7 +81,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoga project"
+            <a href="#" class="primary-link project-link" title="Yoga project"
               >Launch Yoga App</a
             >
           </div>
@@ -97,7 +97,10 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title="Weather project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title="Weather project"
               >Launch Weather App</a
             >
           </div>
@@ -106,7 +109,7 @@
           <img
             src="images/weather.png"
             alt="Weather project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
@@ -115,7 +118,7 @@
           <img
             src="images/yogurt.png"
             alt="Yogurt project"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
           />
         </div>
         <div class="col-md-6 mb-5">
@@ -127,7 +130,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yogurt project"
+            <a href="#" class="primary-link project-link" title="Yogurt project"
               >Launch Yogurt App</a
             >
           </div>
