--- a/about.html
+++ b/about.html
@@ -14,13 +14,13 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
     <title>About me - Noémie Pivin</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Noémie Pivin</a>
+        <a class="navbar-brand" href="/" title="Homepage">Noémie Pivin</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,15 +35,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html"
+              <a class="nav-link" href="/" title="Homepage"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html" title="About page"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact page"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -63,23 +70,23 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             alt="Yoga project"
-            class="img-fluid rounded d-sm-block"
+            class="img-fluid p-2 mb-4 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="Weather project"
-            class="img-fluid rounded d-sm-block"
+            class="img-fluid p-2 mb-4 shadow rounded"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="Yogurt project"
-            class="img-fluid rounded rounded d-sm-block"
+            class="img-fluid p-2 mb-4 shadow rounded"
           />
         </div>
       </div>
