--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
       name="description"
       content="Noémie Pivin is a front-end developer student based in London, check out her projects and contact her for job inquiries."
     />
-    <title>Front-end developer portfolio - Noémie Pivin</title>
+    <title>Front-end Developer Student Portfolio - Noémie Pivin</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Noémie Pivin</a>
+        <a class="navbar-brand" href="/" title="Homepage">Noémie Pivin</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,15 +35,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html"
+              <a class="nav-link" href="/" title="Homepage"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About page"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact info"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -54,25 +61,25 @@
     <h3 class="text-center">🇫🇷 Front-end developer, based in London</h3>
     <div class="navigation-links mb-5">
       <a
-        href="about.html#contact"
+        href="/about.html#contact"
         class="primary-link"
         title="Contact Noémie Pivin"
         >Contact me</a
       >
-      <a href="about.html" class="secondary-link" title="About Noémie Pivin"
+      <a href="/about.html" class="secondary-link" title="About Noémie Pivin"
         >About me</a
       >
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="/images/yoga.png"
             alt="Yoga project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -88,7 +95,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -105,23 +112,23 @@
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="Weather project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             alt="Yogurt project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-md-6 mb-5">
+        <div class="col-sm-6 mb-5">
           <h2 class="mb-3">Yogurt App</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
